force-app/main/default/objects/DeactivationSetting__mdt/DeactivationSetting__mdt.object-meta.xml
<CustomObject>
    <label>DeactivationSetting</label>
    <pluralLabel>DeactivationSettings</pluralLabel>
</CustomObject>