force-app/main/default/objects/DeactivationSetting__mdt/fields/batch_Size__c.field-meta.xml
<CustomField>
    <fullName>batch_Size__c</fullName>
    <label>batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>