force-app/main/default/objects/DeactivationSetting__mdt/fields/Email_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Email_Deactivation__c</fullName>
    <label>Email Deactivation</label>
    <type>TextArea</type>
</CustomField>