force-app/main/default/objects/DeactivationSetting__mdt/fields/Excluded_Days__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Days__c</fullName>
    <label>Excluded Days</label>
    <length>30</length>
    <type>Text</type>
</CustomField>