force-app/main/default/objects/DeactivationSetting__mdt/fields/License_Names__c.field-meta.xml
<CustomField>
    <fullName>License_Names__c</fullName>
    <label>License Names</label>
    <type>TextArea</type>
</CustomField>