force-app/main/default/objects/DeactivationSetting__mdt/fields/Package_License_Names__c.field-meta.xml
<CustomField>
    <fullName>Package_License_Names__c</fullName>
    <label>Package License Names</label>
    <type>TextArea</type>
</CustomField>