force-app/main/default/objects/DeactivationSetting__mdt/fields/Reactivation_Buffer_Period__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Buffer_Period__c</fullName>
    <label>Reactivation Buffer Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>